@startuml
hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

' Core survey definition
entity "Survey" as Survey {
  *id : UUID <<PK>>
  --
  title : varchar
  description : text
  owner_id : UUID <<FK>>
  expires_at : datetime
  created_at : datetime
  updated_at : datetime
}

entity "Question" as Question {
  *id : UUID <<PK>>
  --
  survey_id : UUID <<FK>>
  question_text : text
  question_type : enum <<single_choice, range_number, open_text>>
  min_value : int  <<nullable>> ' for range_number
  max_value : int  <<nullable>> ' for range_number
  sort_order : int
}

entity "Option" as Option {
  *id : UUID <<PK>>
  --
  question_id : UUID <<FK>>
  option_text : varchar
  sort_order : int
}

entity "SurveyTag" as SurveyTag {
  *survey_id : UUID <<FK>>
  *tag : varchar
}

' Relationships
Survey ||--o{ Question : contains
Question ||--o{ Option : has
Survey ||--o{ SurveyTag : tagged_with

@enduml
